# x7

./: .gitattributes  .gitignore  LICENSE  README.md  cabal.project  flake.nix  pyproject.toml  x7.cabal  x7.py
.github/workflows/: deploy.yml
app/: Main.hs  Parser.hs  State.hs
book/: book.toml
book/src/: SUMMARY.md  index.md  raises.md  stack.md  syntax.md  types.md
book/theme/: ayu-highlight.css  custom-highlight.js  highlight.css  highlight.js  style.css  tomorrow-night.css
examples/: fib.x7  reverse.x7
x7/: __main__.py  core.py
